Fix issue with link panel falling behind editor toolbar
This allows the link panel to be drawn on top of the toolbar, if needed.

--- a/web/src/components/editor/Link.scss
+++ b/web/src/components/editor/Link.scss
@@ -1,7 +1,7 @@
 @import "../../styles/settings";
 
 .panel {
-  position: absolute;
+  position: fixed;
   z-index: 10;
 
   border-radius: $border-radius;
